<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <ImageView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:id="@+id/dogprofile_portrait"
                android:src="@drawable/dog1"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/dog_name"
                    android:text="@string/dog_name1"
                    android:paddingTop="20dp"
                    android:textSize="30dp"
                    android:layout_gravity="center_horizontal"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/dog_type"
                    android:text="@string/dog_type1"
                    android:paddingTop="20dp"
                    android:textSize="20dp"
                    android:layout_gravity="center_horizontal"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/dog_age"
                    android:text="@string/dog_age1"
                    android:paddingTop="20dp"
                    android:textSize="20dp"
                    android:layout_gravity="center_horizontal"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/dog_status"
                    android:text="@string/adopted"
                    android:paddingTop="20dp"
                    android:textSize="20dp"
                    android:layout_gravity="center_horizontal"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingTop="10dp"
                    android:text="Current\nOwner "/>

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/headshot4"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


        <ImageView
            android:layout_width="247dp"
            android:layout_height="80dp"
            android:src="@drawable/story"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text=" I have been \n fostered by ..."
                    android:textSize="20dp"
                    android:layout_gravity="center_vertical"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_home_black_36dp"
                    android:background="?attr/selectableItemBackground"
                    android:layout_gravity="center"
                    />
            </LinearLayout>
            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="80dp"
                android:layout_height="80dp"

                android:src="@drawable/headshot1" />
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="80dp"
                android:layout_height="80dp"

                android:src="@drawable/headshot2" />
            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="80dp"
                android:layout_height="80dp"

                android:src="@drawable/headshot3" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingLeft="9dp"
                android:src="@drawable/ic_favorite_border_black_48dp"
                android:background="?attr/selectableItemBackground"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/adopt"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingLeft="9dp"
                android:src="@drawable/ic_add_black_48dp"
                android:background="?attr/selectableItemBackground"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/addtofriends"/>
        </LinearLayout>




    </LinearLayout>
</ScrollView>